src/OrchardCore.Themes/TheAdmin/wwwroot/css/TheAdmin.css
/* ... */
.left-sidebar-compact #ta-left-sidebar li > figure > ul > li.active ul > li.active .item-label {
  background: rgba(0, 0, 0, 0.05);
  color: rgba(var(--oc-admin-menu-item-font-color-active), 0.9) !important;
  font-weight: 600;
  padding-left: 48px !important;
}
.left-sidebar-compact #ta-left-sidebar li.active > figure > ul > li.active > .item-label::before {
  border-left: 3px solid;
  border-left-color: var(--oc-selected-indicator-color);
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  top: 0;
}
.left-sidebar-compact #ta-left-sidebar li.active > figure > ul > li.active ul > li.active .item-label::before {
  border-left: 3px solid;
  border-left-color: var(--oc-selected-indicator-color);
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  top: 0;
}
.left-sidebar-compact #ta-left-sidebar li.active > figure > ul > li.active > figure > figcaption > .item-label::before {
  border-left: 3px solid;
  border-left-color: var(--oc-selected-indicator-color);
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  top: 0;
}
.left-sidebar-compact #ta-left-sidebar li.active > figure > ul > li .item-label::before {
  border-left: 3px solid;
  border-left-color: rgba(0, 0, 0, 0.2);
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  top: 0;
}
.left-sidebar-compact #ta-left-sidebar li.has-items.active > .item-label {
  padding-left: 48px !important;
}
.left-sidebar-compact #ta-left-sidebar li.has-items.active > .item-label::before {
  border-left: 3px solid;
  border-left-color: rgba(0, 0, 0, 0.2);
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  top: 0;
}
.left-sidebar-compact #ta-left-sidebar li.active > .item-label {
  background-color: rgba(0, 0, 0, 0.1);
  font-weight: 600;
}
.left-sidebar-compact #ta-left-sidebar li .active::before {
  border-left: 3px solid;
  border-left-color: rgba(0, 0, 0, 0.1);
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  top: 0;
}
.left-sidebar-compact #ta-left-sidebar li .active .item-label::before {
  border-left: 3px solid;
  border-left-color: rgba(0, 0, 0, 0.2);
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  top: 0;
}
.left-sidebar-compact #ta-left-sidebar li > figure ul > li > figure .item-label {
  color: var(--oc-admin-menu-item-font-color) !important;
}
.left-sidebar-compact #ta-left-sidebar li > .item-label {
  color: var(--oc-admin-menu-item-font-color) !important;
}
.left-sidebar-compact #ta-left-sidebar li.active > figure ul > li > figure > figcaption > .item-label::before {
  border-left: 3px solid;
  border-left-color: rgba(0, 0, 0, 0.2);
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  top: 0;
}
.left-sidebar-compact #ta-left-sidebar li > figure ul > li > figure ul > li {
  background: rgba(0, 0, 0, 0.1);
}
.left-sidebar-compact #ta-left-sidebar li > figure ul > li > figure ul > li > figure > figcaption > a {
  color: var(--oc-admin-menu-item-font-color-active);
  padding-left: 48px !important;
}
.left-sidebar-compact #ta-left-sidebar li > figure ul > li > figure ul > .active > a {
  padding-left: 44px !important;
}
.left-sidebar-compact #ta-left-sidebar .footer {
  background-color: var(--oc-admin-menu-bg-color) !important;
  position: relative;
  z-index: 1;
}
.left-sidebar-compact #ta-left-sidebar .footer:before {
  content: "";
  width: 60%;
  height: 1px;
  background: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0px auto;
}
.left-sidebar-compact #ta-left-sidebar #filter,
.left-sidebar-compact #ta-left-sidebar #filter:focus {
  display: none;
}

.left-sidebar-compact.scroll #ta-left-sidebar #left-nav > ul > li.visible > figure {
  position: static;
  z-index: unset;
}
.left-sidebar-compact.scroll #ta-left-sidebar #left-nav > ul > li.visible > figure > ul:before {
  content: attr(data-title);
  padding: 0 20px;
  font-size: 14px;
  font-weight: bold;
  width: 100%;
  display: block;
}
.left-sidebar-compact.scroll #ta-left-sidebar #left-nav > ul > li.visible > figure > ul > li:first-child::before {
  background: rgba(0, 0, 0, 0.1);
  margin: 0px auto;
  content: "";
  height: 1px;
  display: block;
  position: absolute;
  width: 90%;
  left: 15px;
}
.left-sidebar-compact.scroll #ta-left-sidebar #left-nav > ul > li > figure > ul {
  position: absolute;
  left: var(--oc-start-navigation-width-when-compact);
  width: var(--oc-start-navigation-width);
  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
  height: calc(100vh - 52px);
  max-height: unset;
  z-index: 1;
  overflow-x: hidden;
  overflow-y: auto;
  scrollbar-width: thin;
  scrollbar-color: var(--oc-scrollbar-color) var(--oc-admin-menu-bg-color);
  top: 0px;
}

/* rtl:ignore */
.left-sidebar-compact #ta-left-sidebar a[aria-expanded=true] .chevron {
  transform: rotate(90deg);
  transition-duration: 0.2s;
}

html:not(.fontawesome-i2svg-complete) #left-nav ul.menu-admin > li > .item-label {
  background-color: #f8f9fa !important;
}

.leftbar-compactor {
  display: block;
  width: var(--oc-start-navigation-width-when-compact);
  height: 50px;
  padding: 10px;
  border: none;
  background-color: transparent;
  color: var(--oc-admin-menu-font-color);
  cursor: pointer;
  font-size: 20px;
  float: right;
  transition-duration: 0.2s;
  display: block;
  transform: scale(2, 1);
}
.leftbar-compactor:focus {
  outline: none;
}
.leftbar-compactor:hover {
  color: rgb(0, 120, 212);
  color: var(rgb(0, 120, 212));
  text-shadow: 0 0 4px rgba(0, 120, 212, 0.5);
}
.leftbar-compactor:before {
  content: "⟪";
}

.left-sidebar-compact .leftbar-compactor {
  transition-duration: 0.2s;
  transform: scale(-2, 1);
}
/* ... */

